# telescope-app

./: .prettierignore  LICENSE  README.md  components.json  eslint.config.ts  index.html  package-lock.json  package.json  solo.yml  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  format.yml  release.yml
src/: App.vue  RouterRoot.vue  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  vue.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  deep_link.rs  intel.rs  intel_commands.rs  intel_state.rs  lib.rs  main.rs  models.rs  sde.rs  telescope_api.rs
src-tauri/src/api/: esi.rs  mod.rs  zkill.rs
src-tauri/src/commands/: lookup.rs  mod.rs  overlay.rs  sde.rs  system.rs
src-tauri/src/domain/: deeplink.rs  dscan.rs  intel_reducer.rs  lookup.rs  mod.rs  sde_lifecycle.rs  threat.rs  version.rs
src/components/: AboutWindow.vue  ActivityHeatmap.vue  AffiliationBadge.test.ts  AffiliationBadge.vue  CombatStats.vue  DscanPanel.vue  EchoSubscriber.vue  EmptyState.vue  EntityCombobox.vue  FilterGroup.vue  FilterSidebar.vue  InputPanel.vue  IntelContextMenu.vue  LookupProgress.vue  NetworkManager.test.ts  NetworkManager.vue  OverlayWindow.vue  PilotDetails.vue  PilotRow.vue  PilotTable.vue  ScanHistory.vue  SettingsPanel.vue  ShareButton.vue  ShipsList.vue  ShortcutEditor.vue  SortableHeader.vue  SystemsList.vue  ThreatBadge.vue  ThreatSummary.vue  TitleBar.vue  UpdateModal.vue
src/components/network/: AnnotationDialog.vue  NetworkAccessDialog.vue  NetworkAccessTab.vue  NetworkEntriesTab.vue  NetworkIndexList.vue
src/components/ui/badge/: index.ts
src/components/ui/button/: index.ts
src/components/ui/checkbox/: Checkbox.vue
src/components/ui/command/: Command.vue  CommandDialog.vue  CommandGroup.vue  CommandInput.vue  CommandItem.vue  CommandSeparator.vue  CommandShortcut.vue
src/components/ui/context-menu/: ContextMenuCheckboxItem.vue  ContextMenuContent.vue  ContextMenuItem.vue  ContextMenuLabel.vue  ContextMenuRadioGroup.vue  (+5 more)
src/composables/: useAboutWindow.ts  useDeepLink.ts  useDscan.ts  useEcho.ts  useGlobalShortcut.ts  useNetworkWindow.ts  useOverlayWindow.ts  usePilotCounts.test.ts  usePilotCounts.ts  usePilotFilters.test.ts  usePilotFilters.ts  usePilotSort.ts  usePilotStream.ts  usePilots.ts  useScanFilters.ts  useScanListeners.ts  useSettings.ts  useSyncedFilters.ts  useUpdateChecker.ts
src/stores/: intel.test.ts  intel.ts
src/styles/: global.css
src/types/: index.ts
src/utils/: annotations.test.ts  annotations.ts  config.ts  dscan.test.ts  dscan.ts  format.ts  intel.test.ts  intel.ts  logger.ts  network.test.ts  network.ts  openExternal.ts  pilotAccumulator.test.ts  pilotAccumulator.ts  pilotFilters.test.ts  pilotFilters.ts  pilotSort.test.ts  pilotSort.ts  pilotTags.test.ts  pilotTags.ts  scanInput.test.ts  scanInput.ts  share.ts  shortcut.ts
(+18 files in other folders)
