[package]
name = "Telescope"
version = "0.3.1"
description = "An EVE Online local scanner application built with Tauri."
authors = ["Nicolas Kion"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "telescope_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-cache = "0.1"
tauri-plugin-deep-link = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
    "fs",
    "io-util",
    "time",
] }
futures = "0.3"
chrono = "0.4"
tauri-plugin-os = "2.3.2"
tauri-plugin-window-state = "2"
tauri-plugin-vue = "2.2.0"
url = "2"
urlencoding = "2.1.3"
zip = "2"
# The deep-link feature forwards telescope:// URLs from a second instance's
# argv into the deep-link plugin (Linux/Windows deliver warm-start deep links
# as command-line args; without this the URL is dropped and only focus works).
tauri-plugin-single-instance = { version = "2.4.0", features = ["deep-link"] }
